<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                      http://maven.apache.org/xsd/maven-4.0.0.xsd">	<modelVersion>4.0.0</modelVersion>	<groupId>com.github</groupId>	<artifactId>neuralnetworks</artifactId>	<version>0.1-SNAPSHOT</version>	<packaging>pom</packaging>	<properties>		<maven.compiler.source>1.7</maven.compiler.source>		<maven.compiler.target>1.7</maven.compiler.target>		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>		<commons_collections.version>3.2.1</commons_collections.version>		<maven.test.skip>true</maven.test.skip>	</properties>    <dependencyManagement>        <dependencies>            <dependency>                <groupId>org.uncommons.maths</groupId>                <artifactId>uncommons-maths</artifactId>                <version>1.2.2a</version>            </dependency>            <dependency>                <groupId>junit</groupId>                <artifactId>junit</artifactId>                <version>4.11</version>                <scope>test</scope>            </dependency>            <dependency>                <groupId>com.amd</groupId>                <artifactId>aparapi</artifactId>                <version>2013_01_23</version>                <scope>system</scope>                <systemPath>${project.basedir}/nn-core/lib/aparapi.jar</systemPath>            </dependency>        </dependencies>    </dependencyManagement>	<build>		<plugins>            <plugin>                <groupId>org.apache.maven.plugins</groupId>                <artifactId>maven-surefire-plugin</artifactId>                <version>2.17</version>                <configuration>                    <forkCount>3</forkCount>                    <reuseForks>true</reuseForks>                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>                    <systemPropertyVariables>                    </systemPropertyVariables>                </configuration>            </plugin>			<plugin>				<groupId>org.apache.maven.plugins</groupId>				<artifactId>maven-compiler-plugin</artifactId>				<version>3.1</version>				<configuration>					<source>1.8</source>					<target>1.8</target>					<encoding>UTF-8</encoding>				</configuration>			</plugin>			<plugin>				<groupId>org.apache.maven.plugins</groupId>				<artifactId>maven-eclipse-plugin</artifactId>				<version>2.9</version>				<configuration>					<downloadSources>true</downloadSources>					<downloadJavadocs>true</downloadJavadocs>				</configuration>			</plugin>			<plugin>				<groupId>org.apache.maven.plugins</groupId>				<artifactId>maven-resources-plugin</artifactId>				<version>2.6</version>				<configuration>					<encoding>UTF-8</encoding>				</configuration>			</plugin>		</plugins>	</build>	<modules>		<module>nn-core</module>		<module>nn-samples</module>	</modules></project>